add structure top HTML + add ico SVG

--- a/index.html
+++ b/index.html
@@ -2,13 +2,40 @@
 <html lang="en">
 
 <head>
-   <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>SANCEO Thomas - CV</title>
 </head>
 
 <body>
-
+    <div class="header">
+        <div class="top">
+            <div class="name">Sanceo Thomas</div>
+            <div class="job">Developpeur Web</div>
+            <div class="biography">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit asperiores, aperiam perferendis sapiente cum molestias aliquam veniam a voluptatem placeat nemo.</div>
+            <div class="social">
+                <div class="social-block">
+                    <div class="ico">
+                        <div class="twitter"></div>
+                    </div>
+                    <p>/foch_01</p>
+                </div>
+                <div class="social-block">
+                    <div class="ico">
+                        <div class="linkedin"></div>
+                    </div>
+                    <p>/sanceothomas</p>
+                </div>
+                <div class="social-block">
+                    <div class="ico">
+                        <div class="viadeo"></div>
+                    </div>
+                    <p>/thomas.sanceo</p>
+                </div>
+            </div>
+        </div>
+        <div class="bottom"></div>
+    </div>
 </body>
 
 </html>
