CSS part header

--- a/index.html
+++ b/index.html
@@ -2,39 +2,75 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>SANCEO Thomas - CV</title>
 </head>
 
 <body>
-    <div class="header">
-        <div class="top">
-            <div class="name">Sanceo Thomas</div>
-            <div class="job">Developpeur Web</div>
-            <div class="biography">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit asperiores, aperiam perferendis sapiente cum molestias aliquam veniam a voluptatem placeat nemo.</div>
-            <div class="social">
-                <div class="social-block">
-                    <div class="ico">
-                        <div class="twitter"></div>
-                    </div>
-                    <p>/foch_01</p>
+    <div class="container-fluid">
+        <div class="row center">
+            <div class="top col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <div class="left col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <div class="profil"></div>
                 </div>
-                <div class="social-block">
-                    <div class="ico">
-                        <div class="linkedin"></div>
+                <div class="right col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                    <div class="name uppercase">Sanceo Thomas</div>
+                    <div class="job uppercase">Developpeur Web</div>
+                    <div class="biography">J’ai 19 ans, ancien sportif de haut-niveau dans le Judo et Jujitsu. Je suis passionné par le web depuis plus de 5 ans. J’ai une soif de réussir, je suis compétiteur et j’adore le challenge.</div>
+                    <div class="social">
+                        <div class="social-block">
+                            <div class="square center">
+                                <div class="twitter"></div>
+                            </div>
+                            <p class="url">/foch_01</p>
+                        </div>
+                        <div class="social-block">
+                            <div class="square center">
+                                <div class="linkedin"></div>
+                            </div>
+                            <p class="url">/sanceothomas</p>
+                        </div>
+                        <div class="social-block">
+                            <div class="square center">
+                                <div class="viadeo"></div>
+                            </div>
+                            <p class="url">/thomas.sanceo</p>
+                        </div>
                     </div>
-                    <p>/sanceothomas</p>
-                </div>
-                <div class="social-block">
-                    <div class="ico">
-                        <div class="viadeo"></div>
-                    </div>
-                    <p>/thomas.sanceo</p>
                 </div>
             </div>
         </div>
-        <div class="bottom"></div>
+        <div class="row center">
+            <div class="no-pad col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <div class="bottom">
+                    <div class="left col-xs-8 col-sm-8 col-md-8 col-lg-8">
+
+                        <div class="part-1">
+                            <div class="title-1">
+                                <div class="square-2">
+                                    <div class="ico-formation"></div>
+                                </div>
+                                <p class="formation">Formation</p>
+                            </div>
+                            <div class="vertical-trace">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="title-2">
+                                <span class="name-t2">
+                                Simplon.co</span>
+                                <span class="annee">2016-2017</span>
+                            </div>
+                            <div class="content">
+                                Formation Développeur Web à Rennes (Code Académie)
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
