--- a/index.html
+++ b/index.html
@@ -49,24 +49,68 @@
 
                         <div class="part-1">
                             <div class="title-1">
-                                <div class="square-2">
+                                <div class="square-2 center">
                                     <div class="ico-formation"></div>
                                 </div>
-                                <p class="formation">Formation</p>
+                                <p class="formation uppercase">Formation</p>
                             </div>
-                            <div class="vertical-trace">
-                                <div class="circle"></div>
+                            <div class="content-1">
+                                <div class="vertical-trace">
+                                    <div class="circle"></div>
+                                    <div class="circle-2"></div>
+                                </div>
+                                <div class="title-2">
+                                    <span class="name-t2">
+                                Simplon.co |</span>
+                                    <span class="annee">2016-2017</span>
+                                </div>
+                                <div class="content">
+                                    Formation Développeur Web à Rennes (Code Académie)
+                                </div>
                             </div>
-                            <div class="title-2">
-                                <span class="name-t2">
-                                Simplon.co</span>
-                                <span class="annee">2016-2017</span>
-                            </div>
-                            <div class="content">
-                                Formation Développeur Web à Rennes (Code Académie)
+                            <div class="content-3">
+                                <div class="title-2">
+                                    <span class="name-t3">
+                                Simplon.co |</span>
+                                    <span class="annee-3">2016-2017</span>
+                                </div>
+                                <div class="content-3">
+                                    Formation Développeur Web à Rennes (Code Académie)
+                                </div>
                             </div>
                         </div>
-
+                        <div class="part-1">
+                            <div class="title-1">
+                                <div class="square-2 center">
+                                    <div class="ico-formation"></div>
+                                </div>
+                                <p class="formation uppercase">Formation</p>
+                            </div>
+                            <div class="content-1">
+                                <div class="vertical-trace">
+                                    <div class="circle"></div>
+                                    <div class="circle-2"></div>
+                                </div>
+                                <div class="title-2">
+                                    <span class="name-t2">
+                                Simplon.co |</span>
+                                    <span class="annee">2016-2017</span>
+                                </div>
+                                <div class="content">
+                                    Formation Développeur Web à Rennes (Code Académie)
+                                </div>
+                            </div>
+                            <div class="content-2">
+                                <div class="title-2">
+                                    <span class="name-t2">
+                                Simplon.co |</span>
+                                    <span class="annee">2016-2017</span>
+                                </div>
+                                <div class="content">
+                                    Formation Développeur Web à Rennes (Code Académie)
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
