--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="maximum-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <title>SANCEO Thomas - CV</title>
 </head>
@@ -12,11 +17,11 @@
 <body>
     <div class="container-fluid">
         <div class="row center">
-            <div class="top col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                <div class="left col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="top col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                <div class="left col-xs-12 col-sm-8 col-md-4 col-lg-4">
                     <div class="profil"></div>
                 </div>
-                <div class="right col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <div class="right col-xs-12 col-sm-8 col-md-8 col-lg-8">
                     <div class="name uppercase">Sanceo Thomas</div>
                     <div class="job uppercase">Developpeur Web</div>
                     <div class="biography">J’ai 19 ans, ancien sportif de haut-niveau dans le Judo et Jujitsu. Je suis passionné par le web depuis plus de 5 ans. J’ai une soif de réussir, je suis compétiteur et j’adore le challenge.</div>
@@ -44,9 +49,9 @@
             </div>
         </div>
         <div class="row center">
-            <div class="no-pad col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <div class="no-pad col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <div class="bottom">
-                    <div class="no-pad col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                    <div class="no-pad col-xs-12 col-sm-8 col-md-8 col-lg-8">
                         <div class="part-1">
                             <div class="title">
                                 <div class="square-l center">
@@ -60,7 +65,7 @@
                             <div class="square-xs square-xs-2"></div>
                             <div class="item-1">
                                 <div class="title-2">
-                                    <div class="object">Simplon.co |</div>
+                                    <div class="object center">Simplon.co <div class="display-none">|</div></div>
                                     <div class="annee">2016 - 2017</div>
                                 </div>
                                 <div class="describe">
@@ -69,7 +74,7 @@
                             </div>
                             <div class="item-2">
                                 <div class="title-2">
-                                    <div class="object">Lycée Scientifique |</div>
+                                    <div class="object center">Lycée Scientifique<div class="display-none">|</div></div>
                                     <div class="annee">2012 - 2016</div>
                                 </div>
                                 <div class="describe">
@@ -82,7 +87,7 @@
                                 <div class="square-l center">
                                     <div class="ico-pro"></div>
                                 </div>
-                                <div class="title-1">Expériences Professionnelles</div>
+                                <div class="title-1 title-inline">Expériences Professionnelles</div>
                             </div>
                             <div class="verticale-lign"></div>
                             <div class="square-xs square-xs-1">
@@ -90,7 +95,7 @@
                             <div class="square-xs square-xs-2"></div>
                             <div class="item-1">
                                 <div class="title-2">
-                                    <div class="object">Blogueur & Youtuber |</div>
+                                    <div class="object center">Blogueur & Youtuber<div class="display-none">|</div></div>
                                     <div class="annee">2013 - Présent</div>
                                 </div>
                                 <div class="describe">
@@ -99,7 +104,7 @@
                             </div>
                             <div class="item-2">
                                 <div class="title-2">
-                                    <div class="object">Ouvrier |</div>
+                                    <div class="object center">Ouvrier<div class="display-none">|</div></div>
                                     <div class="annee">Juillet 2015 - Août 2015</div>
                                 </div>
                                 <div class="describe">
@@ -118,19 +123,19 @@
                             <div class="square-xs square-xs-3"></div>
                             <div class="square-xs square-xs-1">
                             </div>
-                            <div class="square-xs square-xs-2"></div>
-                            <div class="item-1">
+                            <div class="square-xs square-xs-2 square-relative"></div>
+                            <div class="item-1 alignement-1">
                                 <div class="title-2">
-                                    <div class="object">Brevet de secourisme |</div>
+                                    <div class="object center">Brevet de secourisme<div class="display-none">|</div></div>
                                     <div class="annee">2010</div>
                                 </div>
                                 <div class="describe">
                                     Diplôme obtenu avec la caserne des pompiers à Quimperlé (29300)
                                 </div>
                             </div>
-                            <div class="item-2">
+                            <div class="item-2 alignement-2">
                                 <div class="title-2">
-                                    <div class="object">Brevet des colleges |</div>
+                                    <div class="object center">Brevet des colleges<div class="display-none">|</div></div>
                                     <div class="annee">2010</div>
                                 </div>
                                 <div class="describe">
@@ -139,7 +144,7 @@
                             </div>
                             <div class="item-3">
                                 <div class="title-2">
-                                    <div class="object">Terminale S |</div>
+                                    <div class="object center">Terminale S<div class="display-none">|</div></div>
                                     <div class="annee">2015 - 2016</div>
                                 </div>
                                 <div class="describe">
@@ -227,7 +232,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="no-pad col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <div class="no-pad col-xs-12 col-sm-4 col-md-4 col-lg-4">
                         <div class="perso">
                             <div class="title">
                                 <div class="square-l center">
@@ -316,7 +321,7 @@
                                 </div>
                                 <div class="title-1">Qualités</div>
                             </div>
-                            <div class="skills">
+                            <div class="skills-xs">
                                 <div class="competences">
                                     <div class="competence">Créatif</div>
                                     <div class="competence">Innovant</div>
