add developpeur web

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                             <div class="square-xs square-xs-2 square-relative"></div>
                             <div class="item-1 alignement-1">
                                 <div class="title-2">
+                                    <div class="object center">Terminale S<div class="display-none">|</div></div>
+                                    <div class="annee">2015 - 2016</div>
+                                </div>
+                                <div class="describe">
+                                    Spécialité Informatique et Science du Numérique (ISN)
+                                </div>
+                            </div>
+                            <div class="item-2 alignement-2">
+                                <div class="title-2">
                                     <div class="object center">Brevet de secourisme<div class="display-none">|</div></div>
                                     <div class="annee">2010</div>
                                 </div>
@@ -133,23 +142,15 @@
                                     Diplôme obtenu avec la caserne des pompiers à Quimperlé (29300)
                                 </div>
                             </div>
-                            <div class="item-2 alignement-2">
-                                <div class="title-2">
-                                    <div class="object center">Brevet des colleges<div class="display-none">|</div></div>
-                                    <div class="annee">2010</div>
-                                </div>
-                                <div class="describe">
-                                    Mention Bien
-                                </div>
-                            </div>
                             <div class="item-3">
                                 <div class="title-2">
-                                    <div class="object center">Terminale S<div class="display-none">|</div></div>
-                                    <div class="annee">2015 - 2016</div>
+                                    <div class="object center">Développeur Web<div class="display-none">|</div></div>
+                                    <div class="annee">2016 - 2017</div>
                                 </div>
                                 <div class="describe">
-                                    Spécialité Informatique et Science du Numérique (ISN)
+                                    Création de sites & applications web
                                 </div>
+
                             </div>
                         </div>
                         <div class="part-4">
